--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,9 +1,9 @@
 @use './color.scss' as *;
 
-@import url('https://static.zeoseven.com/zsft/189/main/result.css');
-@import url('https://fonts.font.im/css?family=Ubuntu');
-@import url(https://fonts.font.im/css?family=Source+Code+Pro:500);
-@import url('https://static.zeoseven.com/zsft/309/main/result.css');
+// @import url('https://static.zeoseven.com/zsft/189/main/result.css');
+// @import url('https://fonts.font.im/css?family=Ubuntu');
+// @import url(https://fonts.font.im/css?family=Source+Code+Pro:500);
+// @import url('https://static.zeoseven.com/zsft/309/main/result.css');
 
 html {
 	padding: 0;
