fix: 修复静态资源预加载机制

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -2,7 +2,7 @@
 
 // @import url('https://static.zeoseven.com/zsft/189/main/result.css');
 // @import url('https://fonts.font.im/css?family=Ubuntu');
-// @import url(https://fonts.font.im/css?family=Source+Code+Pro:500);
+// @import url('https://fonts.font.im/css?family=Source+Code+Pro:500');
 // @import url('https://static.zeoseven.com/zsft/309/main/result.css');
 
 html {
