--- a/src/app/components/Public/Footer/footer.module.scss
+++ b/src/app/components/Public/Footer/footer.module.scss
@@ -7,7 +7,7 @@
 	p {
 		font-family: 'Source Code Pro', monospace;
 		font-size: 14px;
-		color: var(--footer-text-color);
+		color: var(--text-color);
 	}
 
 	.container {
