--- a/src/app/color.scss
+++ b/src/app/color.scss
@@ -70,6 +70,7 @@
 		/* code 颜色 */
 		--code-color: #bebebe;
 		--code-bg-color: #3b3b3bb1;
+		--code-pre-bg-color: #3b3b3bb1;
 
 		/* 链接颜色 */
 		--link-color: var(--text-color);
