--- a/src/app/color.scss
+++ b/src/app/color.scss
@@ -18,6 +18,7 @@
 	/* code 颜色 */
 	--code-color: #575757;
 	--code-bg-color: #d1d1d16f;
+	--code-pre-bg-color: #efefef;
 
 	/* 链接颜色 */
 	--link-color: rgb(56, 56, 56);
@@ -70,7 +71,7 @@
 		/* code 颜色 */
 		--code-color: #bebebe;
 		--code-bg-color: #3b3b3bb1;
-		--code-pre-bg-color: #3b3b3bb1;
+		--code-pre-bg-color: #242424b1;
 
 		/* 链接颜色 */
 		--link-color: var(--text-color);
