fix: 修正代码块换行问题

--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -122,18 +122,33 @@
 			color: var(--code-color) !important;
 			overflow-x: auto;
 
+			white-space: pre;
+			word-wrap: normal;
+
 			code {
 				font-family: 'Source Code Pro', monospace;
 				padding: 3px 6px;
-
-				white-space: pre-wrap;
-				word-wrap: break-word;
 
 				border-radius: 8px;
 				color: var(--code-color);
 				background: transparent !important;
 				color: inherit;
 				padding: 0 !important;
+			}
+
+			code {
+				// 修改滚动条样式
+				&::-webkit-scrollbar {
+					width: 8px;
+					height: 8px;
+				}
+				&::-webkit-scrollbar-track {
+					background: var(--code-pre-bg-color);
+				}
+				&::-webkit-scrollbar-thumb {
+					background: var(--border-color);
+					border-radius: 4px;
+				}
 			}
 		}
 
