--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -5,11 +5,13 @@
 		background-color: var(--bg-color);
 		.titlePanel {
 			background-size: 14px 14px;
+			position: relative;
 			background-image:
 				linear-gradient(to right, var(--bg-border-color) 1px, transparent 1px),
 				linear-gradient(to bottom, var(--bg-border-color) 1px, transparent 1px);
 
 			.breadcrumb {
+				position: absolute;
 				color: var(--text-color);
 				padding: 15px;
 			}
@@ -18,6 +20,8 @@
 				padding: 40px;
 
 				h1 {
+					margin-top: 12px;
+					padding: 15px 0;
 					font-weight: 800;
 					font-size: 48px;
 				}
@@ -47,13 +51,21 @@
 	}
 }
 
+.space {
+	border-bottom: 1px solid var(--border-color);
+
+	#spaceContent {
+		height: 60px;
+	}
+}
+
 .postContent {
 	max-width: 100%;
 	overflow-x: visible;
 
 	border-bottom: 1px solid var(--border-color);
 	#postDown {
-		padding: 20px;
+		padding: 20px 120px;
 
 		code:not(pre code) {
 			background-color: var(--code-bg-color);
@@ -137,7 +149,6 @@
 			}
 
 			code {
-				// 修改滚动条样式
 				&::-webkit-scrollbar {
 					width: 8px;
 					height: 8px;
@@ -166,6 +177,37 @@
 			border: 1px solid var(--border-color);
 			padding: 8px;
 			text-align: left;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.postTitle {
+		#postTop {
+			.titlePanel {
+				.breadcrumb {
+					font-size: 12px;
+				}
+				.content {
+					h1 {
+						font-size: 32px;
+					}
+					.tags {
+						.tag {
+							font-size: 16px;
+						}
+					}
+					.date {
+						font-size: 14px;
+					}
+				}
+			}
+		}
+	}
+
+	.postContent {
+		#postDown {
+			padding: 20px 50px;
 		}
 	}
 }
