--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -3,6 +3,8 @@
 @import url('highlight.js/styles/github.css') screen and (prefers-color-scheme: light);
 @import url('highlight.js/styles/github-dark.css') screen and (prefers-color-scheme: dark);
 
+@import 'artalk/dist/Artalk.css';
+
 html {
 	padding: 0;
 	margin: 0;
