fix: 修复代码块错误的深色模式字体

--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -121,8 +121,7 @@
 			font-family: 'Source Code Pro', monospace;
 			padding: 20px;
 			background: var(--code-pre-bg-color);
-			color: var(--code-color);
-			color: inherit;
+			color: var(--code-color) !important;
 		}
 
 		.postStyle img {
