fix: 修复滚动条 max-width 与 max-height

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -85,8 +85,8 @@ a {
 
 ::-webkit-scrollbar,
 scrollbar {
-	width: 10px;
-	height: 6px;
+	max-width: 10px;
+	max-height: 6px;
 	background-color: var(--scrollbar-bg-color);
 }
 
