--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -113,7 +113,7 @@
 		}
 
 		.postStyle blockquote {
-			background: linear-gradient(to top, #f3f3f3, #f6f6f6);
+			background: linear-gradient(to top, var(--blockquote-color), var(--blockquote-to-color));
 			border-left: 5px solid var(--border-color);
 			padding-left: 10px;
 			padding: 0.25rem 0 0.25rem 1rem;
@@ -145,6 +145,8 @@
 		}
 
 		.postStyle table {
+			color: var(--text-color);
+			background-color: var(--bg-border-color);
 			width: 100%;
 			border-collapse: collapse;
 		}
@@ -157,7 +159,7 @@
 		}
 
 		.postStyle th {
-			background-color: var(--code-pre-bg-color);
+			background-color: var(--code-bg-color);
 		}
 	}
 }
