feat: 调整post 字体

--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -74,32 +74,33 @@
 		}
 		.postStyle h2 {
 			font-size: 28px;
-			font-weight: 800;
+			font-weight: 700;
 			margin: 12px 0;
 		}
 		.postStyle h3 {
 			font-size: 24px;
-			font-weight: 800;
+			font-weight: 600;
 			margin: 12px 0;
 		}
 		.postStyle h4 {
 			font-size: 20px;
-			font-weight: 800;
+			font-weight: 500;
 			margin: 8px 0;
 		}
 		.postStyle h5 {
 			font-size: 16px;
-			font-weight: 800;
+			font-weight: 500;
 			margin: 8px 0;
 		}
 		.postStyle h6 {
 			font-size: 14px;
-			font-weight: 800;
+			font-weight: 500;
 			margin: 8px 0;
 		}
 		.postStyle p {
 			font-size: 18px;
-			margin: 8px 0;
+			margin: 16px 0;
+			line-height: 1.7;
 		}
 		.postStyle ul {
 			font-size: 18px;
