--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -31,13 +31,14 @@
 					display: flex;
 					gap: 5px;
 					padding: 8px 0;
+					flex-wrap: wrap;
 
 					.tag {
 						padding: 0px 5px;
 						font-size: 20px;
-						border-radius: 5px;
 						background-color: var(--code-bg-color);
 						color: var(--code-color);
+						font-family: 'Source Code Pro', monospace;
 					}
 				}
 
