--- a/src/app/components/Layout/Blog/PostList/list.module.scss
+++ b/src/app/components/Layout/Blog/PostList/list.module.scss
@@ -59,20 +59,26 @@
 			gap: 10px;
 			align-items: center;
 
+			flex-wrap: wrap;
+
 			.postDate {
 				display: flex;
+				align-items: center;
 			}
 
 			.tags {
 				display: flex;
 				gap: 5px;
 				color: var(--text-color);
+				flex-wrap: wrap;
+				align-items: center;
 
 				.tag {
 					padding: 0px 5px;
-					font-size: 15px;
-					border-radius: 5px;
+					font-size: 17px;
+					color: var(--code-color);
 					background-color: var(--code-bg-color);
+					font-family: 'Source Code Pro', monospace;
 				}
 			}
 		}
