feat: 为 post tag 点击跳转 tags 页

--- a/src/app/color.scss
+++ b/src/app/color.scss
@@ -20,6 +20,7 @@
 	/* code 颜色 */
 	--code-color: #575757;
 	--code-bg-color: #d1d1d16f;
+	--code-bg-color-hover: #8785856f;
 	--code-pre-bg-color: #f6f8fa;
 
 	/* blockquote 颜色 */
@@ -79,6 +80,7 @@
 		/* code 颜色 */
 		--code-color: #bebebe;
 		--code-bg-color: #3b3b3bb1;
+		--code-bg-color-hover: #787a7a90;
 		--code-pre-bg-color: #151b23;
 
 		/* blockquote 颜色 */
