--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -5,6 +5,15 @@
 
 @import 'artalk/dist/Artalk.css';
 
+* {
+	transition:
+		background-color 0.5s ease-in-out,
+		color 0.5s ease-in-out,
+		border-color 0.5s ease-in-out,
+		background-image 0.5s ease-in-out,
+		fill 0.5s ease-in-out;
+}
+
 html {
 	padding: 0;
 	margin: 0;
