--- a/src/app/components/Public/TopAnchor/ta.module.scss
+++ b/src/app/components/Public/TopAnchor/ta.module.scss
@@ -3,8 +3,9 @@
     bottom: 20px;
     right: 20px;
     cursor: pointer;
-    opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: 
+        opacity 0.3s ease,
+        visibility 0.3s ease;
     background: none;
     border: none;
     padding: 0;
@@ -12,6 +13,14 @@
 
     &.visible {
         opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
+    &.hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
     }
 }
 
@@ -21,4 +30,10 @@
     border-left: 18px solid transparent;
     border-right: 18px solid transparent;
     border-bottom: 30px solid var(--text-color);
+    
+    .visible & {
+        &:hover {
+            border-bottom-color: var(--primary-color);
+        }
+    }
 }
