fix: 修正了一些单词拼写错误

--- a/src/app/components/Layout/About/Content/content.module.scss
+++ b/src/app/components/Layout/About/Content/content.module.scss
@@ -47,7 +47,7 @@
 .space {
 	border-bottom: 1px solid var(--border-color);
 	/* background-color: rgba(248, 248, 248, 0.436); */
-	#spaceConent {
+	#spaceContent {
 		height: 120px;
 	}
 }
