--- a/src/app/components/Public/TopAnchor/ta.module.scss
+++ b/src/app/components/Public/TopAnchor/ta.module.scss
@@ -29,11 +29,11 @@
 	height: 0;
 	border-left: 18px solid transparent;
 	border-right: 18px solid transparent;
-	border-bottom: 30px solid var(--text-color);
+	border-bottom: 30px solid var(--bg-color-reverse);
 
 	.visible & {
 		&:hover {
-			border-bottom-color: var(--primary-color);
+			border-bottom-color: var(--bg-color-reverse);
 		}
 	}
 }
