feat: 优化字体显示

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -84,7 +84,7 @@ li {
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Ubuntu', 'Noto Sans CJK KR', sans-serif;
+	font-family: 'Ubuntu Sans', 'Noto Sans CJK KR', sans-serif;
 }
 
 .HtmlLogo {
