feat: 增加一些动画组件效果

--- a/src/app/components/Layout/About/Content/content.module.scss
+++ b/src/app/components/Layout/About/Content/content.module.scss
@@ -58,6 +58,12 @@
 		}
 	}
 }
+.intro {
+	border-top: 1px solid var(--border-color);
+	#carousel {
+		padding: 60px 0px;
+	}
+}
 
 .space {
 	border-bottom: 1px solid var(--border-color);
