--- a/src/app/components/Layout/Home/Main/main.module.scss
+++ b/src/app/components/Layout/Home/Main/main.module.scss
@@ -10,6 +10,16 @@
 	.content {
 		margin: 0 auto;
 		padding: 70px 20px 80px;
+
+		.br {
+			font-size: 42px;
+			font-weight: 800;
+			color: var(--text-sub-color);
+		}
+
+		h1 span {
+			display: block;
+		}
 	}
 
 	h1,
@@ -38,6 +48,12 @@
 
 		p {
 			font-size: 16px;
+		}
+
+		.content {
+			.br {
+				font-size: 28px;
+			}
 		}
 	}
 }
