--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,7 +1,8 @@
 @use './color.scss' as *;
 
-@import url('highlight.js/styles/github.css') screen and (prefers-color-scheme: light);
-@import url('highlight.js/styles/github-dark.css') screen and (prefers-color-scheme: dark);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import 'artalk/dist/Artalk.css';
 
@@ -98,6 +99,7 @@ body {
 }
 
 section {
+	position: relative;
 	max-width: 1200px;
 	margin: 0 auto;
 	border-left: 1px solid var(--border-color);
