--- a/src/app/components/Layout/About/Main/main.module.scss
+++ b/src/app/components/Layout/About/Main/main.module.scss
@@ -21,7 +21,7 @@
 .space {
 	border-bottom: 1px solid var(--border-color);
 	background-color: var(--bg-sub-space-color);
-	#spaceConent {
+	#spaceContentt {
 		height: 50px;
 	}
 }
