--- a/src/app/blog/[slug]/post.module.scss
+++ b/src/app/blog/[slug]/post.module.scss
@@ -106,6 +106,11 @@
 		.postStyle ul {
 			font-size: 18px;
 		}
+
+		.postStyle li::marker {
+			color: var(--text-sub-color);
+		}
+
 		.postStyle ol {
 			font-size: 18px;
 		}
