--- a/src/app/components/Public/Carousel/Carousel.scss
+++ b/src/app/components/Public/Carousel/Carousel.scss
@@ -2,6 +2,7 @@
 .carousel {
 	width: 100%;
 	height: 100%;
+	padding: 20px 0;
 	overflow: hidden;
 	position: relative;
 	perspective: 1000px;
@@ -15,7 +16,6 @@
 	&__controls {
 		display: flex;
 		justify-content: center;
-		margin-top: 1.5rem;
 		padding: 1rem;
 		border-radius: 0.375rem;
 	}
@@ -41,6 +41,9 @@
 		z-index: 10;
 		cursor: default;
 		transform: rotateX(0deg) scale(1);
+		.slide__image-container {
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+		}
 	}
 
 	&--inactive {
@@ -72,7 +75,6 @@
 	&__overlay {
 		position: absolute;
 		inset: 0;
-		background-color: rgba(0, 0, 0, 0.3);
 		transition: all 1s;
 	}
 
