--- a/src/app/components/Public/Header/header.module.scss
+++ b/src/app/components/Public/Header/header.module.scss
@@ -2,9 +2,22 @@
 	.blurOverlay {
 		position: fixed;
 		inset: 0;
-		backdrop-filter: blur(6px);
-		background-color: rgba(200, 200, 200, 0.1);
 		z-index: 10;
+		backdrop-filter: blur(0px);
+		background-color: rgba(200, 200, 200, 0);
+		opacity: 0;
+		pointer-events: none;
+		transition:
+			backdrop-filter 0.3s ease,
+			background-color 0.3s ease,
+			opacity 0.3s ease;
+
+		&.active {
+			backdrop-filter: blur(12px);
+			background-color: rgba(200, 200, 200, 0.1);
+			opacity: 1;
+			pointer-events: auto;
+		}
 	}
 	#headerPanel {
 		position: relative;
