fix: 修复顶部加载条 zIndex 问题

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -6,6 +6,11 @@
 
 @import 'artalk/dist/Artalk.css';
 
+#nprogress {
+	position: relative;
+	z-index: 9999;
+}
+
 * {
 	transition:
 		background-color 0.5s ease-in-out,
