--- a/src/app/color.scss
+++ b/src/app/color.scss
@@ -11,6 +11,8 @@
 	--bg-sub-text-color: #f8f8f86f;
 	--bg-sub-panel-color: #f8f8f85b;
 
+	--bg-sub-panel-color2: #f0f0f0;
+
 	/* 字体颜色 */
 	--text-color: black;
 	--text-color-reverse: white;
@@ -80,6 +82,8 @@
 
 		--bg-sub-text-color: #39393942;
 		--bg-sub-panel-color: #3e3e3e5b;
+
+		--bg-sub-panel-color2: #3e3e3e;
 
 		/* 字体颜色 */
 		--text-color: rgba(255, 255, 255, 0.696);
