--- a/src/app/components/Layout/About/Content/content.module.scss
+++ b/src/app/components/Layout/About/Content/content.module.scss
@@ -98,11 +98,19 @@
 			font-size: 40px;
 			margin-bottom: 8px;
 			color: var(--text-color);
+
+			@media screen and (max-width: 768px) {
+				font-size: 26px;
+			}
 		}
 
 		p {
 			font-size: 18px;
 			color: var(--text-sub-color);
+
+			@media screen and (max-width: 768px) {
+				font-size: 16px;
+			}
 		}
 
 		@media screen and (max-width: 768px) {
