--- a/src/app/components/Layout/Home/Main/main.module.scss
+++ b/src/app/components/Layout/Home/Main/main.module.scss
@@ -10,50 +10,59 @@
 	.content {
 		margin: 0 auto;
 		padding: 70px 20px 80px;
+		text-align: center;
+
+		h1 {
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+			font-family: 'KingHwa_OldSong';
+			font-weight: 800;
+			font-size: 52px;
+			margin-bottom: 15px;
+			line-height: 1.2;
+			flex-wrap: wrap;
+			gap: 0.3em;
+
+			> span {
+				display: inline-block;
+				vertical-align: middle;
+				line-height: inherit;
+				font-size: inherit;
+			}
+		}
 
 		.br {
-			font-size: 42px;
+			font-size: inherit;
 			font-weight: 800;
 			color: var(--text-sub-color);
 		}
-
-		h1 span {
-			display: block;
-		}
-	}
-
-	h1,
-	p {
-		text-align: center;
-	}
-
-	h1 {
-		font-family: 'KingHwa_OldSong';
-		font-weight: 800;
-		font-size: 52px;
-		margin-bottom: 15px;
 	}
 
 	p {
-		/* font-family: 'Raleway', sans-serif; */
 		color: var(--text-sub-color);
 		font-weight: 400;
 		font-size: 19px;
+		text-align: center;
 	}
 
 	@media screen and (max-width: 768px) {
-		h1 {
-			font-size: 33px;
+		.content {
+			padding: 50px 15px 60px;
+
+			h1 {
+				font-size: 33px;
+				gap: 0.2em;
+			}
+
+			.br {
+				font-size: inherit;
+			}
 		}
 
 		p {
 			font-size: 16px;
-		}
-
-		.content {
-			.br {
-				font-size: 28px;
-			}
 		}
 	}
 }
