--- a/src/app/color.scss
+++ b/src/app/color.scss
@@ -124,7 +124,7 @@
 		--scrollbar-thumb-color: rgba(226, 226, 226, 0.728);
 
 		/* 头像边框颜色 */
-		--avatar-border-color: #2b2b2b;
+		--avatar-border-color: #929292;
 
 		/* fill 颜色（图标） */
 		--fill-color: #b0b0b0;
