--- a/src/app/components/Layout/Links/Friends/friends.module.scss
+++ b/src/app/components/Layout/Links/Friends/friends.module.scss
@@ -1,10 +1,34 @@
-.friendContainer {
+.pinnedFriendsTitle {
+	border-bottom: 1px solid var(--border-color);
+	#pinnedTitle {
+		padding: 10px;
+		h1 {
+			font-size: 1.4rem;
+			font-weight: 200;
+			color: var(--text-sub-color);
+			text-align: center;
+			letter-spacing: 0.5em;
+		}
+	}
+
+	@media (max-width: 768px) {
+		#pinnedTitle {
+			padding: 8px;
+			h1 {
+				font-size: 1rem;
+				letter-spacing: 0.3em;
+			}
+		}
+	}
+}
+
+.pinnedFriends {
 	background-color: var(--bg-sub-panel-color);
 	background-size: 100%;
 	background-image: repeating-linear-gradient(45deg, var(--bg-border-color) 0px, var(--bg-border-color) 1px, transparent 1px, transparent 30px);
 	border-bottom: 1px solid var(--border-color);
 
-	#friends {
+	#pinFriends {
 		padding: 40px 20px;
 		border-left: none;
 		border-right: none;
@@ -50,6 +74,11 @@
 			display: flex;
 			gap: 10px;
 			margin-top: 15px;
+
+			.socialIcon {
+				width: 26px;
+				height: 26px;
+			}
 		}
 
 		.leftAlign {
@@ -57,12 +86,76 @@
 		}
 
 		.rightAlign {
-			/* justify-content: flex-end; */
 			text-align: right;
 			flex-direction: row-reverse;
 			.social {
 				flex-direction: row-reverse;
 			}
+		}
+	}
+
+	@media (max-width: 768px) {
+		#pinFriends {
+			padding: 23px 18px;
+
+			.friendName {
+				font-size: 1.2rem;
+			}
+
+			.friendDescription {
+				font-size: 1rem;
+			}
+
+			.social {
+				font-size: 1.2rem;
+
+				.socialIcon {
+					width: 20px;
+					height: 20px;
+				}
+			}
+
+			.friendImg {
+				width: 90px;
+				height: 90px;
+			}
+		}
+	}
+}
+
+.unpinnedFriendsTitle {
+	border-bottom: 1px solid var(--border-color);
+	#unpinnedTitle {
+		padding: 10px;
+		h1 {
+			font-size: 1.4rem;
+			font-weight: 200;
+			color: var(--text-sub-color);
+			text-align: center;
+			letter-spacing: 0.5em;
+		}
+	}
+
+	@media (max-width: 768px) {
+		#unpinnedTitle {
+			padding: 8px;
+			h1 {
+				font-size: 1rem;
+				letter-spacing: 0.3em;
+			}
+		}
+	}
+}
+
+.unPinnedFriends {
+	border-bottom: 1px solid var(--border-color);
+	#unPinFriends {
+		padding: 20px 0;
+	}
+
+	@media (max-width: 768px) {
+		#unPinFriends {
+			padding: 8px 0;
 		}
 	}
 }
