--- a/src/app/components/Public/InfiniteMovingCards/InfiniteMovingCards.module.scss
+++ b/src/app/components/Public/InfiniteMovingCards/InfiniteMovingCards.module.scss
@@ -15,7 +15,7 @@
 	flex-shrink: 0;
 	flex-wrap: nowrap;
 	gap: 1rem;
-    margin: 20px 0;
+	margin: 20px 0;
 }
 
 .animateScroll {
@@ -54,33 +54,34 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-    gap: .3rem;
+	gap: 0.3rem;
 
-    h4, p {
-        margin: 0;
-        padding: 0;
-    }
+	h4,
+	p {
+		margin: 0;
+		padding: 0;
+	}
 
-    h4 {
-        font-size: 1.125rem;
-        font-weight: 600;
-        color: var(--text-color);
-    }
+	h4 {
+		font-size: 1.125rem;
+		font-weight: 600;
+		color: var(--text-color);
+	}
 
-    p {
-        font-size: 0.875rem;
-        color: var(--text-sub-color);
-    }
+	p {
+		font-size: 0.875rem;
+		color: var(--text-sub-color);
+	}
 
-    @media (max-width: 768px) {
-        h4 {
-            font-size: 1rem;
-        }
+	@media (max-width: 768px) {
+		h4 {
+			font-size: 1rem;
+		}
 
-        p {
-            font-size: 0.75rem;
-        }
-    }
+		p {
+			font-size: 0.75rem;
+		}
+	}
 }
 
 .avatarImg {
@@ -88,9 +89,9 @@
 	border-radius: 9999px;
 	object-fit: cover;
 	border: 1px solid var(--avatar-border-color);
-    @media (max-width: 768px) {
-        margin-bottom: .3rem;
-    }
+	@media (max-width: 768px) {
+		margin-bottom: 0.3rem;
+	}
 }
 
 .name {
@@ -126,10 +127,10 @@
 		transform: scale(1.1);
 	}
 
-    @media (max-width: 768px) {
-        width: 1.15rem;
-        height: 1.15rem;
-    }
+	@media (max-width: 768px) {
+		width: 1.15rem;
+		height: 1.15rem;
+	}
 }
 
 @keyframes scroll {
