--- a/src/app/components/Layout/Home/Main/main.module.scss
+++ b/src/app/components/Layout/Home/Main/main.module.scss
@@ -17,7 +17,8 @@
 			justify-content: center;
 			flex-direction: column;
 			align-items: center;
-			font-family: 'KingHwa_OldSong';
+			font-family: 'KingHwaOldSong';
+
 			font-weight: 800;
 			font-size: 52px;
 			margin-bottom: 15px;
