--- a/src/app/components/Layout/Links/Main/main.module.scss
+++ b/src/app/components/Layout/Links/Main/main.module.scss
@@ -23,7 +23,7 @@
 }
 
 .space {
-	border-bottom: 1px solid var(--border-color);
+	// border-bottom: 1px solid var(--border-color);
 	// background-size: 100%;
 	// background-image: repeating-linear-gradient(135deg, var(--bg-border-color) 0px, var(--bg-border-color) 1px, transparent 1px, transparent 6px);
 	#spaceConent {
