--- a/src/app/components/Layout/Home/Main/main.module.scss
+++ b/src/app/components/Layout/Home/Main/main.module.scss
@@ -8,11 +8,15 @@
 	}
 
 	.content {
-		margin: 0 auto;
-		padding: 70px 20px 80px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		height: 70dvh;
 		text-align: center;
 
 		h1 {
+			padding: 20px;
 			display: flex;
 			justify-content: center;
 			flex-direction: column;
@@ -21,7 +25,6 @@
 
 			font-weight: 800;
 			font-size: 52px;
-			margin-bottom: 15px;
 			line-height: 1.2;
 			flex-wrap: wrap;
 			gap: 0.3em;
@@ -50,8 +53,7 @@
 
 	@media screen and (max-width: 768px) {
 		.content {
-			padding: 50px 15px 60px;
-
+			height: 60dvh;
 			h1 {
 				font-size: 33px;
 				gap: 0.2em;
