--- a/src/app/components/Layout/Home/Projects/projects.module.scss
+++ b/src/app/components/Layout/Home/Projects/projects.module.scss
@@ -1,10 +1,26 @@
 .intro {
 	background-color: var(--bg-sub-space-color);
-	padding: 20px;
+	border-bottom: 1px solid var(--border-color);
+	#introPanel {
+		padding: 20px;
 
-	p {
-		color: var(--text-sub-color);
-		font-size: 15px;
+		p {
+			color: var(--text-sub-color);
+			font-size: 15px;
+		}
+	}
+}
+
+.content {
+	background-color: var(--bg-sub-space-color);
+	border-bottom: 1px solid var(--border-color);
+	#contentPanel {
+		padding: 20px;
+
+		p {
+			color: var(--text-sub-color);
+			font-size: 15px;
+		}
 	}
 }
 
@@ -22,25 +38,25 @@
 			grid-template-rows: auto;
 			list-style: none;
 
-			&::before {
-				content: '';
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 1px;
-				background-image: repeating-linear-gradient(
-					to right,
-					var(--border-color) -10px,
-					var(--border-color) 10px,
-					transparent 10px,
-					transparent 20px
-				);
-				background-position-x: 15px;
-				background-position-y: top;
-				background-size: 100% 1px;
-				background-repeat: repeat-x;
-			}
+			// &::before {
+			// 	content: '';
+			// 	position: absolute;
+			// 	top: 0;
+			// 	left: 0;
+			// 	width: 100%;
+			// 	height: 1px;
+			// 	background-image: repeating-linear-gradient(
+			// 		to right,
+			// 		var(--border-color) -10px,
+			// 		var(--border-color) 10px,
+			// 		transparent 10px,
+			// 		transparent 20px
+			// 	);
+			// 	background-position-x: 15px;
+			// 	background-position-y: top;
+			// 	background-size: 100% 1px;
+			// 	background-repeat: repeat-x;
+			// }
 
 			.project {
 				display: grid;
