--- a/src/app/components/Layout/Home/Main/main.module.scss
+++ b/src/app/components/Layout/Home/Main/main.module.scss
@@ -12,7 +12,7 @@
 		justify-content: center;
 		align-items: center;
 
-		height: 70dvh;
+		height: 70vh;
 		text-align: center;
 
 		h1 {
@@ -53,7 +53,7 @@
 
 	@media screen and (max-width: 768px) {
 		.content {
-			height: 60dvh;
+			height: 60vh;
 			h1 {
 				font-size: 33px;
 				gap: 0.2em;
